# BakaNinja-bot

./: .gitignore  README.md  ask.py  daily  dbService.py  feature.py  fursona.py  main.py  pyproject.toml  requirements.txt  responses.py  waifu.py
