[tool.poetry]
name = "repl_python3_beta_BakaNinja-bot"
version = "0.1.0"
description = ""
authors = ["Magimatt <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.0.0"
discord = "^1.0.1"
python-dotenv = "^0.17.0"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
